<resources>
    <string name="app_name">Astro Power</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_register">Sign In/ Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="rashi_fal_leo">कुंभ | Aquarius</string>
    <string name="continue_to_proceed">Continue to Proceed</string>
    <string name="by_continue_you_agree">By Continue, you agree to <b><font color="#FFC107">Terms of Service </font></b> &amp; <b><font color="#FFC107">Privacy Policy</font></b></string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_type_verification_code">Please type the verification code</string>
    <string name="send_to">send to</string>
    <string name="enter_4_digit_otp">ENTER 4 DIGIT OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="create_account">Create\nAccount</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="dob">Date of Birth</string>
    <string name="birth_time">Birth Time</string>
    <string name="birth_place">Birth Place</string>
    <string name="sign_in">Sign In</string>
    <string name="namaskar_guest">Guest User</string>
    <string name="my_profile">My Profile</string>
    <string name="my_family_details">My Family Details</string>
    <string name="my_subscription">My Subscription</string>
    <string name="language_preference">Language Preference</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="powered_by">Powered by : Astro Envision</string>
    <string name="version">Version 1.0.1.1</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="religion">Religion</string>
    <string name="caste">Caste</string>
    <string name="edit_details">Edit Details</string>
    <string name="rashi_description">अनेक अवसर होने के बाद भी आप का ध्यान कहीं और होने से परिस्थिति नकारात्मक नजर आ रही है। कार्य का श्रेय प्राप्त करने की कोशिश करनी होगी। अपनी परिस्थिति को संभालने के लिए मानसिक और शारीरिक रूप से स्वस्थ रहना आपके लिए जरूरी होगा। इस बात का ध्यान रखें।  करियर : विद्यार्थियों का ध्यान भटकता हुआ नजर आ रहा है। पढ़ाई के बारे में जागरूकता रखें।  लव : परिवार के लोगों के द्वारा बोली गई बातों के बाद भी रिलेशनशिप संबंधी निर्णय पर आप टिके रहने की कोशिश करेंगे।</string>
    <string name="date">रविवार, 18 सितम्बर 2022</string>
    <string name="view_more">view_more</string>
    <string name="horoscope">Horoscope</string>
    <string name="kundali_matching">Kundli Matching</string>
    <string name="manglik_dosh">Manglik Dosha- Exist ?</string>
    <string name="kal_sarpa">Kaal Sarpa Dosha</string>
    <string name="astro_facts">Astro Facts</string>
    <string name="profile">Profile</string>
    <string name="my_family">My Family</string>
    <string name="talk_to_astro">Talk to Astrologer</string>
    <string name="relation">Relation</string>
    <string name="add">Add</string>
    <string name="add_member">Add Member</string>
    <string name="no_data_found">No Data Found !</string>
    <string name="take_subscription">Take Subscription</string>
    <string name="dummy_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="proceed_for_payment">Proceed for Payment</string>
    <string name="report_name">Report Name</string>
    <string name="career_profession"><![CDATA[Career & Profession]]></string>
    <string name="bill_details">Bill Details</string>
    <string name="total_report">Total Report</string>
    <string name="actual_amount">Actual Amount</string>
    <string name="discount">Discount</string>
    <string name="add_report">Add Report</string>

    <string-array name="signature">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Miss</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>