<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_register"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textStyle="normal"/>

        <View
            android:layout_width="@dimen/lay_width_80dp"
            android:layout_height="@dimen/lay_height_3dp"
            android:layout_marginTop="@dimen/activity_margin_10dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/light_gray" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/lay_width_50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textSize="@dimen/text_size_14sp"
                android:textColor="@color/gray"
                android:gravity="start"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_gray_round_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91"
                    android:textSize="@dimen/text_size_14sp"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:textStyle="normal"
                    android:padding="@dimen/padding_15"/>

                <View
                    android:layout_width="@dimen/lay_width_1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray"/>

            </LinearLayout>


            <TextView
                android:id="@+id/txt_continue_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_50dp"
                android:background="@drawable/round_yellow_outline_bg"
                android:gravity="center"
                android:padding="@dimen/margin_16dp"
                android:paddingStart="@dimen/margin_16dp"
                android:text="@string/continue_to_proceed"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_height_1dp"
            android:layout_marginTop="@dimen/activity_margin_10dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/light_gray" />


        <TextView
            android:id="@+id/txt_save_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:gravity="center"
            android:text="@string/by_continue_you_agree"
            android:textSize="@dimen/text_size_13sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>