<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:id="@+id/lay_top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_round_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_15dp"
            android:adjustViewBounds="true"
            android:src="@drawable/adtop" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robo_bold"
            android:gravity="start"
            android:text="@string/rashi_fal_leo"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:fontFamily="@font/robo_bold"
            android:gravity="start"
            android:text="@string/date"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:fontFamily="@font/robo_regular"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/margin_1dp"
            android:maxLines="3"
            android:text="@string/rashi_description"
            android:textColor="@color/color_272F38"
            android:textSize="@dimen/text_size_14sp" />


        <TextView
            android:id="@+id/txt_continue_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@drawable/yellow_outline_white_round_bg"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_20"
            android:paddingTop="@dimen/padding_10"
            android:paddingRight="@dimen/padding_20"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/view_more"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold" />

    </LinearLayout>




    <RelativeLayout
        android:id="@+id/lay_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_top_banner"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_minus_15dp"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">


        <ScrollView
            android:layout_above="@id/lay_bottom_tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lay_bottom_tabs"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/activity_margin_15dp"
            android:layout_marginBottom="@dimen/activity_margin_15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/activity_margin_15dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/activity_margin_15dp"
                        app:cardElevation="@dimen/activity_margin_5dp"
                        app:cardPreventCornerOverlap="false">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/image1" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/robo_regular"
                        android:text="@string/horoscope"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/activity_margin_15dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/activity_margin_15dp"
                        app:cardElevation="@dimen/activity_margin_5dp"
                        app:cardPreventCornerOverlap="false">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/image3" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/robo_regular"
                        android:text="@string/kundali_matching"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14sp" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_margin_15dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/activity_margin_15dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/activity_margin_15dp"
                        app:cardElevation="@dimen/activity_margin_5dp"
                        app:cardPreventCornerOverlap="false">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/image4" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/robo_regular"
                        android:text="@string/manglik_dosh"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_10"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/activity_margin_15dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/activity_margin_15dp"
                        app:cardElevation="@dimen/activity_margin_5dp"
                        app:cardPreventCornerOverlap="false">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/image2" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/robo_regular"
                        android:text="@string/kal_sarpa"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        </ScrollView>


        <LinearLayout
            android:id="@+id/lay_bottom_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_margin_20dp"
            android:background="@drawable/round_solid_gray"
            android:paddingStart="@dimen/padding_5"
            android:paddingEnd="@dimen/margin_5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_astro_facts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:layout_gravity="center"
                    android:text="@string/astro_facts"
                    android:textColor="@color/dark_blue"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_talk_to_astrologer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:layout_gravity="center"
                    android:text="@string/talk_to_astro"
                    android:textColor="@color/dark_blue"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_my_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:layout_gravity="center"
                    android:text="@string/my_family_details"
                    android:textColor="@color/dark_blue"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_my_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:text="@string/profile"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_blue"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_12sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>