<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <include
        android:id="@+id/white_toolbar"
        layout="@layout/layout_toolbar_white_bg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/family_member_rv"
        android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:layout_above="@+id/card_add_member"
        android:layout_below="@+id/white_toolbar" />

    <LinearLayout
        android:id="@+id/ll_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textColor="@color/color_green"
            android:fontFamily="@font/robo_bold"
            android:textSize="@dimen/text_size_22sp"
            android:gravity="center"/>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_continue_proceed"
        android:layout_marginStart="@dimen/activity_margin_15dp"
        android:layout_marginTop="@dimen/margin_15dp"
        app:cardCornerRadius="@dimen/activity_margin_20dp"
        app:cardElevation="@dimen/activity_margin_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin_15dp"
            android:paddingTop="@dimen/activity_margin_10dp"
            android:paddingRight="@dimen/activity_margin_15dp"
            android:paddingBottom="@dimen/activity_margin_10dp">


            <ImageView
                android:layout_width="@dimen/activity_margin_20dp"
                android:layout_height="@dimen/activity_margin_20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_margin_5dp"
                android:src="@drawable/ic_add" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/robo_regular"
                android:text="@string/add_member"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txt_continue_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:background="@drawable/solid_yellow_curve_bg"
        android:gravity="center"
        android:padding="@dimen/margin_16dp"
        android:text="@string/proceed_for_payment"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold" />


</RelativeLayout>